--- a/fish_pretrained_model.ipynb
+++ b/fish_pretrained_model.ipynb
@@ -200,7 +200,7 @@
     "    assert split_name in ['train', 'validation']\n",
     "\n",
     "    num_per_shard = int(math.ceil(len(filenames) / float(_NUM_SHARDS)))\n",
-    "        \n",
+    "    bbox_count = 0    \n",
     "    with tf.Graph().as_default():\n",
     "        image_reader = ImageReader()\n",
     "\n",
@@ -211,6 +211,7 @@
     "                with tf.python_io.TFRecordWriter(output_filename) as tfrecord_writer:\n",
     "                    start_ndx = shard_id * num_per_shard\n",
     "                    end_ndx = min((shard_id+1) * num_per_shard, len(filenames))\n",
+    "                    \n",
     "                    for i in range(start_ndx, end_ndx):\n",
     "                        sys.stdout.write('\\r>> Converting image %d/%d shard %d' % (\n",
     "                            i+1, len(filenames), shard_id))\n",
@@ -228,11 +229,12 @@
     "                            lst_xmin = [bbox['x_min'] for bbox in bbox_json]\n",
     "                            lst_ymax = [bbox['y_max'] for bbox in bbox_json]\n",
     "                            lst_xmax = [bbox['x_max'] for bbox in bbox_json]\n",
+    "                            bbox_count += 1\n",
     "                        except:\n",
     "                            lst_ymin = 0\n",
     "                            lst_xmin = 0\n",
-    "                            lst_ymax = 1\n",
-    "                            lst_xmax = 1\n",
+    "                            lst_ymax = 0\n",
+    "                            lst_xmax = 0\n",
     "\n",
     "                        class_name = os.path.basename(os.path.dirname(filenames[i]))\n",
     "                        class_id = class_names_to_ids[class_name]\n",
@@ -243,6 +245,7 @@
     "\n",
     "    sys.stdout.write('\\n')\n",
     "    sys.stdout.flush()\n",
+    "#     print(bbox_count)\n",
     "\n",
     "\n",
     "def _clean_up_temporary_files(dataset_dir):\n",
@@ -1260,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -1272,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1295,11 +1298,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.5529843750000084, 0.6047578125000092]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lst_xmax"
    ]
