--- a/fish_ssd.ipynb
+++ b/fish_ssd.ipynb
@@ -458,13 +458,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "#load dataset|\n",
     "slim = tf.contrib.slim\n",
     "\n",
     "image_size = 720\n",
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -567,7 +568,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# np version bbox preprocess\n",
+    "def bboxes_resize(bbox_ref, bboxes, name=None):\n",
+    "    \"\"\"Resize bounding boxes based on a reference bounding box,\n",
+    "    assuming that the latter is [0, 0, 1, 1] after transform. Useful for\n",
+    "    updating a collection of boxes after cropping an image.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    bbox_ref = np_distorted_bbox.reshape(-1, 4)\n",
+    "    v = np.column_stack([bbox_ref[:, 0], bbox_ref[:, 1], bbox_ref[:, 0], bbox_ref[:, 1]]).reshape(-1 ,1, 4) \n",
+    "    bboxes = bboxes - v\n",
+    "    # Scale.\n",
+    "    s = np.stack([bbox_ref[:, 2] - bbox_ref[:, 0],\n",
+    "                  bbox_ref[:, 3] - bbox_ref[:, 1],\n",
+    "                  bbox_ref[:, 2] - bbox_ref[:, 0],\n",
+    "                  bbox_ref[:, 3] - bbox_ref[:, 1]]).reshape(-1, 1, 4)\n",
+    "    bboxes = bboxes / s\n",
+    "    return bboxes\n",
+    "\n",
+    "def bboxes_jaccard(bbox_ref, bboxes, name=None):\n",
+    "    \"\"\"Compute jaccard score between a reference box and a collection\n",
+    "    of bounding boxes.\n",
+    "\n",
+    "    Args:\n",
+    "      bbox_ref: (N, 4) or (4,) Tensor with reference bounding box(es).\n",
+    "      bboxes: (N, 4) Tensor, collection of bounding boxes.\n",
+    "    Return:\n",
+    "      (N,) Tensor with Jaccard scores.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Should be more efficient to first transpose.\n",
+    "    bboxes = np.transpose(bboxes)\n",
+    "    bbox_ref = np.transpose(bbox_ref)\n",
+    "    # Intersection bbox and volume.\n",
+    "    int_ymin = tf.maximum(bboxes[0], bbox_ref[0])\n",
+    "    int_xmin = tf.maximum(bboxes[1], bbox_ref[1])\n",
+    "    int_ymax = tf.minimum(bboxes[2], bbox_ref[2])\n",
+    "    int_xmax = tf.minimum(bboxes[3], bbox_ref[3])\n",
+    "    h = tf.maximum(int_ymax - int_ymin, 0.)\n",
+    "    w = tf.maximum(int_xmax - int_xmin, 0.)\n",
+    "    # Volumes.\n",
+    "    inter_vol = h * w\n",
+    "    union_vol = -inter_vol \\\n",
+    "        + (bboxes[2] - bboxes[0]) * (bboxes[3] - bboxes[1]) \\\n",
+    "        + (bbox_ref[2] - bbox_ref[0]) * (bbox_ref[3] - bbox_ref[1])\n",
+    "    jaccard = tfe_math.safe_divide(inter_vol, union_vol, 'jaccard')\n",
+    "    return jaccard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "bboxes = bboxes_resize(np_distorted_bbox, np_bboxes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -575,21 +644,115 @@
     {
      "data": {
       "text/plain": [
-       "(8, 1, 1, 4)"
+       "(8, 1, 4)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np_distorted_bbox.shape"
+    "bboxes.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0.47014925,  0.33724833,  0.67014927,  0.39597315]],\n",
+       "\n",
+       "       [[ 0.47361112,  0.31406251,  0.55277777,  0.44453126]],\n",
+       "\n",
+       "       [[ 0.63044429,  0.47700012,  0.86671466,  0.62766635]],\n",
+       "\n",
+       "       [[ 0.        ,  0.        ,  0.        ,  0.        ]],\n",
+       "\n",
+       "       [[ 0.05979579,  0.29299939,  0.25367913,  0.43949908]],\n",
+       "\n",
+       "       [[ 0.20133333,  0.33750001,  0.44933334,  0.50312501]],\n",
+       "\n",
+       "       [[ 0.        ,  0.        ,  0.        ,  0.        ]],\n",
+       "\n",
+       "       [[ 0.        ,  0.        ,  0.        ,  0.        ]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np_bboxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0.4928571 ,  0.15332198,  0.63857138,  0.34241906],\n",
+       "        [-0.02142857, -0.54003406, -0.02142857, -0.54003406]],\n",
+       "\n",
+       "       [[ 0.34789962, -0.11391871,  0.49466544,  0.15203252],\n",
+       "        [-0.27323419, -0.4211382 , -0.27323419, -0.4211382 ]],\n",
+       "\n",
+       "       [[ 0.85697019,  0.08137924,  1.23855019,  0.30038154],\n",
+       "        [ 0.92101157,  0.20394018,  1.30259156,  0.37673098]],\n",
+       "\n",
+       "       [[ 0.34626436,  0.25382933,  0.61781609,  0.36323851],\n",
+       "        [-0.01149425, -0.36433259, -0.01149425, -0.36433259]],\n",
+       "\n",
+       "       [[ 0.55600846,  0.03032355,  0.74493653,  0.29103234],\n",
+       "        [ 0.66538787, -0.35422188,  0.93386459, -0.2303852 ]],\n",
+       "\n",
+       "       [[ 0.43116885,  0.49289095,  1.16363633,  1.32938397],\n",
+       "        [-0.82597399, -0.86966825, -0.82597399, -0.86966825]],\n",
+       "\n",
+       "       [[ 1.10426533, -0.56995887,  1.46445501, -0.4423869 ],\n",
+       "        [ 0.90047395, -0.44032925,  1.0663507 , -0.03497944]],\n",
+       "\n",
+       "       [[-0.20194647, -1.16037738,  1.54987836,  1.85849071],\n",
+       "        [-0.20194647, -1.16037738, -0.20194647, -1.16037738]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np_bboxes -v) / s.reshape(-1, 1, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "s = np.column_stack([bbox_ref[:, 2] - bbox_ref[:, 0],\n",
+    "                  bbox_ref[:, 3] - bbox_ref[:, 1],\n",
+    "                  bbox_ref[:, 2] - bbox_ref[:, 0],\n",
+    "                  bbox_ref[:, 3] - bbox_ref[:, 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -600,7 +763,7 @@
        "(8, 2, 4)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,9 +785,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
