--- a/fish_ssd.ipynb
+++ b/fish_ssd.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -590,6 +590,7 @@
     "                  bbox_ref[:, 2] - bbox_ref[:, 0],\n",
     "                  bbox_ref[:, 3] - bbox_ref[:, 1]]).reshape(-1, 1, 4)\n",
     "    bboxes = bboxes / s\n",
+    "    bboxes = np.minimum(np.maximum(bboxes, 0), 1)\n",
     "    return bboxes\n",
     "\n",
     "def bboxes_jaccard(bbox_ref, bboxes, name=None):\n",
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -636,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -644,10 +645,10 @@
     {
      "data": {
       "text/plain": [
-       "(8, 1, 4)"
+       "(8, 3, 4)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,119 +659,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 0.47014925,  0.33724833,  0.67014927,  0.39597315]],\n",
-       "\n",
-       "       [[ 0.47361112,  0.31406251,  0.55277777,  0.44453126]],\n",
-       "\n",
-       "       [[ 0.63044429,  0.47700012,  0.86671466,  0.62766635]],\n",
-       "\n",
-       "       [[ 0.        ,  0.        ,  0.        ,  0.        ]],\n",
-       "\n",
-       "       [[ 0.05979579,  0.29299939,  0.25367913,  0.43949908]],\n",
-       "\n",
-       "       [[ 0.20133333,  0.33750001,  0.44933334,  0.50312501]],\n",
-       "\n",
-       "       [[ 0.        ,  0.        ,  0.        ,  0.        ]],\n",
-       "\n",
-       "       [[ 0.        ,  0.        ,  0.        ,  0.        ]]], dtype=float32)"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np_bboxes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 0.4928571 ,  0.15332198,  0.63857138,  0.34241906],\n",
-       "        [-0.02142857, -0.54003406, -0.02142857, -0.54003406]],\n",
-       "\n",
-       "       [[ 0.34789962, -0.11391871,  0.49466544,  0.15203252],\n",
-       "        [-0.27323419, -0.4211382 , -0.27323419, -0.4211382 ]],\n",
-       "\n",
-       "       [[ 0.85697019,  0.08137924,  1.23855019,  0.30038154],\n",
-       "        [ 0.92101157,  0.20394018,  1.30259156,  0.37673098]],\n",
-       "\n",
-       "       [[ 0.34626436,  0.25382933,  0.61781609,  0.36323851],\n",
-       "        [-0.01149425, -0.36433259, -0.01149425, -0.36433259]],\n",
-       "\n",
-       "       [[ 0.55600846,  0.03032355,  0.74493653,  0.29103234],\n",
-       "        [ 0.66538787, -0.35422188,  0.93386459, -0.2303852 ]],\n",
-       "\n",
-       "       [[ 0.43116885,  0.49289095,  1.16363633,  1.32938397],\n",
-       "        [-0.82597399, -0.86966825, -0.82597399, -0.86966825]],\n",
-       "\n",
-       "       [[ 1.10426533, -0.56995887,  1.46445501, -0.4423869 ],\n",
-       "        [ 0.90047395, -0.44032925,  1.0663507 , -0.03497944]],\n",
-       "\n",
-       "       [[-0.20194647, -1.16037738,  1.54987836,  1.85849071],\n",
-       "        [-0.20194647, -1.16037738, -0.20194647, -1.16037738]]], dtype=float32)"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(np_bboxes -v) / s.reshape(-1, 1, 4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "s = np.column_stack([bbox_ref[:, 2] - bbox_ref[:, 0],\n",
-    "                  bbox_ref[:, 3] - bbox_ref[:, 1],\n",
-    "                  bbox_ref[:, 2] - bbox_ref[:, 0],\n",
-    "                  bbox_ref[:, 3] - bbox_ref[:, 1]])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8, 2, 4)"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np_bboxes.shape"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -785,9 +706,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
