dataset ssd generate

--- a/fish_pretrained_model.ipynb
+++ b/fish_pretrained_model.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -158,7 +158,7 @@
     "    photo_filenames = []\n",
     "    for directory in directories:\n",
     "        for filename in os.listdir(directory):\n",
-    "            if filename.split('.')[-1] in ['jpg', 'png', 'jepg']:\n",
+    "            if filename.split('.')[-1] in ['jpg', 'png', 'jpeg']:\n",
     "                path = os.path.join(directory, filename)\n",
     "                photo_filenames.append(path)\n",
     "        \n",
@@ -172,12 +172,12 @@
     "\n",
     "def _get_bb():\n",
     "    label_files = ['label/bet_labels.json',\n",
-    "                 'label/alb_labels.json',\n",
-    "                 'label/yft_labels.json',\n",
-    "                 'label/dol_labels.json',\n",
-    "                 'label/shark_labels.json',\n",
-    "                 'label/lag_labels.json',\n",
-    "                 'label/other_labels.json']\n",
+    "                   'label/alb_labels.json',\n",
+    "                   'label/yft_labels.json',\n",
+    "                   'label/dol_labels.json',\n",
+    "                   'label/shark_labels.json',\n",
+    "                   'label/lag_labels.json',\n",
+    "                   'label/other_labels.json']\n",
     "    labels = []\n",
     "    for i in range(len(label_files)):\n",
     "        label_file = label_files[i]\n",
@@ -220,6 +220,9 @@
     "                        # Read the filename:\n",
     "                        image_data = tf.gfile.FastGFile(filenames[i], 'r').read()\n",
     "                        height, width = image_reader.read_image_dims(sess, image_data)\n",
+    "                        \n",
+    "                        class_name = os.path.basename(os.path.dirname(filenames[i]))\n",
+    "                        class_id = class_names_to_ids[class_name]\n",
     "\n",
     "                        try:\n",
     "                            bb_label_index = next(index for (index, d) in enumerate(bb_labels) \n",
@@ -229,18 +232,19 @@
     "                            lst_xmin = [bbox['x_min'] for bbox in bbox_json]\n",
     "                            lst_ymax = [bbox['y_max'] for bbox in bbox_json]\n",
     "                            lst_xmax = [bbox['x_max'] for bbox in bbox_json]\n",
+    "                            lst_label = [int(class_id) for _ in range(len(bbox_json))]\n",
     "                            bbox_count += 1\n",
     "                        except:\n",
     "                            lst_ymin = 0\n",
     "                            lst_xmin = 0\n",
     "                            lst_ymax = 0\n",
     "                            lst_xmax = 0\n",
+    "                            lst_label = 0\n",
     "\n",
-    "                        class_name = os.path.basename(os.path.dirname(filenames[i]))\n",
-    "                        class_id = class_names_to_ids[class_name]\n",
-    "\n",
+    "                        image_name = filenames[i].split(os.sep)[-1]\n",
     "                        example = dataset_utils.image_to_tfexample(\n",
-    "                            image_data, b'jpg', height, width, class_id, lst_ymin, lst_xmin, lst_ymax, lst_xmax)\n",
+    "                            image_data, b'jpg', height, width, image_name.encode('utf-8'), \n",
+    "                            lst_ymin, lst_xmin, lst_ymax, lst_xmax, lst_label)\n",
     "                        tfrecord_writer.write(example.SerializeToString())\n",
     "\n",
     "    sys.stdout.write('\\n')\n",
@@ -287,7 +291,9 @@
     "\n",
     "#     dataset_utils.download_and_uncompress_tarball(_DATA_URL, dataset_dir)\n",
     "    photo_filenames, class_names = _get_filenames_and_classes(dataset_dir)\n",
-    "    class_names_to_ids = dict(zip(class_names, range(len(class_names))))\n",
+    "    \n",
+    "    # class_id encode begin 1\n",
+    "    class_names_to_ids = dict(zip(class_names, range(1, len(class_names)+1)))\n",
     "\n",
     "    # Divide into train and test:\n",
     "    random.seed(_RANDOM_SEED)\n",
@@ -302,7 +308,7 @@
     "    _convert_dataset('validation', validation_filenames, bb_labels, class_names_to_ids, dataset_dir)\n",
     "\n",
     "    # Finally, write the labels file:\n",
-    "    labels_to_class_names = dict(zip(range(len(class_names)), class_names))\n",
+    "    labels_to_class_names = dict(zip(range(1, len(class_names)+1), class_names))\n",
     "    dataset_utils.write_label_file(labels_to_class_names, dataset_dir)\n",
     "\n",
     "#     _clean_up_temporary_files(dataset_dir)\n",
@@ -312,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1343,9 +1349,9 @@
   "anaconda-cloud": {},
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
