--- a/fish_pretrained_model.ipynb
+++ b/fish_pretrained_model.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -237,8 +237,8 @@
     "                        except:\n",
     "                            lst_ymin = 0\n",
     "                            lst_xmin = 0\n",
-    "                            lst_ymax = 0\n",
-    "                            lst_xmax = 0\n",
+    "                            lst_ymax = 1.0\n",
+    "                            lst_xmax = 1.0\n",
     "                            lst_label = 0\n",
     "\n",
     "                        image_name = filenames[i].split(os.sep)[-1]\n",
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1349,9 +1349,9 @@
   "anaconda-cloud": {},
   "celltoolbar": "Raw Cell Format",
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
